--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/graph_concept.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/graph_concept.html
@@ -1,6 +1,8 @@
 {% load i18n %}
+{% load cache %}
+{% cache 3600 graph_collection_static_head %}
 {% block head %}
-  <script src="/static/ndf/bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="/static/ndf/bower_components/jquery-ui/jquery-ui.js"></script>
   <!-- Scripts required for D3 graph -->
   <script type="text/javascript" src="/static/ndf/bower_components/d3/d3.min.js"></script> <!-- checked -->
   <script type="text/javascript" src="/static/ndf/bower_components/underscore/underscore.js"></script> <!-- checked -->
@@ -121,7 +123,9 @@
             }
 
 	</style>
+	{% endcache %}
 	<body>
+
 		<!-- This is panel on LHS of graph -->
 		<div class="graph-info-panel">
 			<div>
