--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
@@ -27459,6 +27459,11 @@ course-title {
 }
 
 /* END of Landing page */
+/* line 4240, ../../../scss/_app_styles.scss */
+.audio-caption {
+  cursor: pointer;
+}
+
 /*
 *  CLIx Platform Stylesheet
 */
