--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/tiss/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/tiss/styles.css
@@ -27482,3 +27482,7 @@ course-title {
 }
 
 /* END of Landing page */
+/* line 4240, ../../../scss/_app_styles.scss */
+.audio-caption {
+  cursor: pointer;
+}
