--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -289,11 +289,11 @@ $(document).on('click','.view-more-tags',function(){
         msg = confirm("Do you want to delete this resource?.");
         if (msg == true) {
             $.ajax({
-                    type: "GET",
+                    type: "POST",
                     url: "{% url 'trash_resource' group_id node %}",
                     datatype: "html",
                     data:{
-                           
+                           csrfmiddlewaretoken: '{{ csrf_token }}'
                       },
                   success: function(data) {
                         data = JSON.parse(data)
