Display img on card of Course & Base Courses

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -4076,7 +4076,7 @@ course-title{
     img  {
       border-radius: 2px 2px 0 0;
       display: block;
-      visibility: hidden;
+      /*visibility: hidden;*/
       margin: 0 auto;
       opacity: 0.9;
       height:100%;
