--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
@@ -27283,7 +27283,7 @@ course-title {
 .event-card .event-card-image img {
   border-radius: 2px 2px 0 0;
   display: block;
-  visibility: hidden;
+  /*visibility: hidden;*/
   margin: 0 auto;
   opacity: 0.9;
   height: 100%;
