--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
@@ -112,7 +112,7 @@
     <!-- suppy no_description=True for not having description -->
     {% if not no_description %}
       <div class="scard-desc" title="{{resource.content_org}}">
-       {{resource.content_org|safe|default_if_none:"Add some description."|truncatechars:50}}
+       {{resource.content|safe|default_if_none:"Add some description."|truncatechars:50}}
       </div>
     {% endif %}
 </div>
