--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="medium-2 columns ">
-        <img class="footer-logo" src="/static/ndf/css/themes/metastudio/logo.svg" />
+        <img class="footer-logo" src="{{site.LOGO}}" />
     </div>
   </section>
   <!--div class="row">
