--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/UploadDoc.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/UploadDoc.html
@@ -78,11 +78,12 @@ i.remove-tag{
   </div>
 </form>
 -->
-<form class="dropzone" id ="docPost" enctype="multipart/form-data" method="post" action="{% url 'upload_file' groupid %}">{% csrf_token %}
+<form class="dropzone" id ="docPost" enctype="multipart/form-data" method="post" action="{% url 'upload_using_save_file' groupid %}">{% csrf_token %}
 	<div class ="row">
 		<fieldset small-6 large-12 columns>
 			<legend>{% trans "Upload File" %}</legend>
 			<div class="fallback">
+				<input type="hidden" name="context_name" value="{{title}}">
 				<label>{% trans "Choose File" %}</label>
 				<input type="file" name="filehive"  id="docFile" multiple/>
 				<label>{% trans "Title of File" %}</label>
@@ -103,7 +104,6 @@ i.remove-tag{
 			</div>
 			{% endcache %}
 		</fieldset>
-
 		<fieldset>
 			<legend>{% trans "Add Description" %}</legend>
 				{% include "ndf/html_editor.html" with var_name="content_org" var_value=node.content|default_if_none:"" node_id=node.pk var_placeholder="Describe the file" %}			
