--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
@@ -7,27 +7,34 @@
 {% get_attribute_value node.pk 'thread_interaction_type' as thr_int_type %}
 {% check_is_gstaff groupid request.user as is_gstaff %}
 {% block head %}
-
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <script type="text/javascript" src="/static/ndf/bower_components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script> <!-- checked -->
   <script src="/static/ndf/js/MediaStreamRecorder.js"></script> 
-  <script src="/static/ndf/js/adapter.js"></script> 
+  <script src="/static/ndf/js/adapter.js"></script>
+
   <!-- Scripts and stylesheets for SideComments -->
   <!-- <script type="text/javascript" src="/static/ndf/bower_components/side-comments/release/side-comments.js"></script> -->
   <!-- <link rel="stylesheet" type"text/css" href="/static/ndf/bower_components/side-comments/release/side-comments.css"> -->
   <!-- <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/side-comments/release/themes/default-theme.css"> -->
-
+  <script src="/static/ndf/js/MediaStreamRecorder.js"></script> 
+  <script src="/static/ndf/js/adapter.js"></script> 
   {% if user.is_authenticated %}
-    <!-- orgitdown! 
-    <script type="text/javascript" src="/static/ndf/orgitdown/jquery.orgitdown-foundation.js"></script>-->
-    <!-- orgitdown! toolbar settings -->
-    <!--<script type="text/javascript" src="/static/ndf/orgitdown/skins/gstudio/set.js"></script>-->
-    <!-- orgitdown! skin --> 
-    <!--<link rel="stylesheet" type="text/css" href="/static/ndf/orgitdown/skins/gstudio/style.css" /> -->
+    <!-- orgitdown! -->
+    <!-- <script type="text/javascript" src="/static/ndf/orgitdown/jquery.orgitdown-foundation.js"></script>
+    orgitdown! toolbar settings
+    <script type="text/javascript" src="/static/ndf/orgitdown/skins/gstudio/set.js"></script> -->
+    <!-- orgitdown! skin -->
+    <!-- <link rel="stylesheet" type="text/css" href="/static/ndf/orgitdown/skins/gstudio/style.css" /> -->
+
     <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/ckeditor.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
 
   {% endif %}
+<style type="text/css">
+  div.reveal-modal > label{
+    color: black !important;
+  }
+</style>
 
 {% endblock %}
 
@@ -35,16 +42,20 @@
 <div >
   <br/>
     {% if allow_to_comment %}
+      <div data-alert class="alert-box new_comments hide info radius">
+        <div class="new_cmnts_lbl">New comment(s) added. Please refresh to see.</div>
+          <a onclick="location.reload()">Refresh <i class="fi-refresh"></i></a>
+          <a href="#" class="close">&times;</a>
+      </div>
+
       <div class="create-discussion">
+
       <div  onclick="createDiscussion()" id="create-discussion" data-id="{{ node.pk }}"  class="ckeditor-comment  button small radius" style="margin-bottom:0;">
         {% if thr_int_type %}
           {{thr_int_type}} {% if all_replies|length > 0 %}({{all_replies|length }}) {% endif %}
         {% else %}
           Comment  {% if all_replies|length > 0 %} ({{all_replies|length }}) {% endif %}
         {% endif %}
-      </div>
-      <div class="discussion-refresh right">
-        <small><a onclick="location.reload()">Refresh <i class="fi-refresh"></i></a></small>
       </div>
     {% endif %}
     </div>
@@ -68,11 +79,11 @@
     {% for each_reply in all_replies %}
       {% if resp_val == True or is_gstaff or request.user.id == each_reply.userid %}
       <div class="content" content-reply-id="{{ each_reply.oid }}" data-reply-level="{{each_reply.level}}" data-userid="{{each_reply.userid}}" >
-        <div style="margin-left:calc(({{each_reply.level}} - 1) * 30px); {% if each_reply.level == 1 %}margin-top:25px;{% endif %}" class="disc-replies" data-reply-id="{{ each_reply.oid }}" data-priornode-id="{{ each_reply.prior_node }}">
+        <div style="margin-left:calc(({{each_reply.level}} - 1) * 48px); {% if each_reply.level == 1 %}margin-top:25px;{% endif %}" class="disc-replies" data-reply-id="{{ each_reply.oid }}" data-priornode-id="{{ each_reply.prior_node }}">
           <div clas="discussion-title row " >
              <div class="discussion-title-username">
               <a  href="{% url 'dashboard' each_reply.userid %}" style="color:#ADABAB !important" title=" {{ each_reply.username }}">
-                {{ each_reply.username|truncatechars:12 }} 
+                {{ each_reply.username }} 
               </a>
                 <small style="float:right;color:#999999">{{ each_reply.last_update }}</small>
             </div>
@@ -141,6 +152,11 @@
 <script type="text/javascript">
   // for discussion tab
   // storing ndf_tags return values in JS variables
+  old_count = 0
+  {% if all_replies %}
+    old_count = {{all_replies|length}}
+  {% endif %}
+
   var user_access = "{{ user_access }}"; // "allow" or "disallow"
   {% edit_policy groupid node request.user as status %}
   var edit_policy = "{{ status }}"; // "allow" or "disallow"
@@ -148,6 +164,7 @@
 
   function createDiscussion()
   {
+    $("#create-discussion").hide();
     if( is_user_authenticated){
        if(checkCurrEdit()){
            return false;
@@ -211,6 +228,7 @@
   // function called by "Add Reply" and "Reply" buttons to open editor
   function openCKEditor(sourceObj)
   {
+      $("#create-discussion").hide();
       // console.log(sourceObj);
           if(checkCurrEdit()){
            return false;
@@ -264,7 +282,7 @@
     }
     else
     {
-      $(".view-discussion span").fadeOut().fadeIn().html("{% trans 'Join Discussion' %}("+totalReplies+")");
+      $("#create-discussion").fadeOut().fadeIn().html("{{thr_int_type}} ("+totalReplies+")");
     }
   }
   function createReplyHTML(replyStyle, data,child_reply_level)
@@ -297,6 +315,7 @@
   function addReply(sourceObj)
   {
 
+    $("create-discussion").show();
     var value = CKEDITOR.instances['ckeditor_textarea'].getData();
     var priorNodeId = $("#prior-node").val(),
         replyContent = value.trim();
@@ -349,15 +368,13 @@
                 child_margin_level = parseInt(parent_margin_level) + 1;          
                 
 
-                $(sourceObj).after(createReplyHTML('margin-left:'+((child_margin_level-1)*30)+'px', data,parseInt(parent_margin_level)+1));
+                $(sourceObj).after(createReplyHTML('margin-left:'+((child_margin_level-1)*48)+'px', data,parseInt(parent_margin_level)+1));
 
               }
               // updating tab-text
+              old_count = old_count + 1
               updateDiscussionTabText();
               
-               
-
-     
             }
             else if( data[0] == "no_content" ){
 
@@ -445,11 +462,6 @@
     }
     return replyArr;
   }
-  // --- END of discussion code ----
-</script>
-
-
-<script type="text/javascript">
 
   function setCurrNodeEdit(oid)
   {
@@ -477,6 +489,7 @@
 
 function editreply(sourceObj){
 //alert(sourceObj);discussion-content" data-reply-id="{{ each_reply.oid }}
+  $("#create-discussion").hide();
   var sourceObjDataId = $(sourceObj).attr("data-id");
   content_thread = $('.discussion-content[data-reply-id='+ sourceObjDataId +']');
   curr_thread = $('.reply-btn[data-id='+ sourceObjDataId +']');
@@ -529,6 +542,7 @@ function editreply(sourceObj){
 }
 
 function save_reply(sourceObj){
+        $("#create-discussion").show();
         var sourceObjDataId = $(sourceObj).attr("data-id");
         var content_val = CKEDITOR.instances['ckeditor_textarea'].getData();
         $( ".cke_button__closebtn_label" ).trigger( "click" );
@@ -565,7 +579,22 @@ function save_reply(sourceObj){
 
 }
 
+  setInterval(function() {
+    var xmlhttp = new XMLHttpRequest();
+    var url = "{% url 'get_thread_comments_count' group_id node.pk %}";
+    xmlhttp.open("GET", url, true);
+    xmlhttp.send();
 
+    xmlhttp.onreadystatechange = function() {
+        if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+            var new_count = JSON.parse(xmlhttp.responseText);
+            if (old_count < new_count && new_count > 0){
+              $(".new_comments").removeClass("hide");
+              $(".new_cmnts_lbl").html(new_count-old_count + " New comment(s). Please refresh to see.")
+            }
+        }
+    };
+  }, 10000);
 </script>
 
 
