Removed console.log statements

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/buddy_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/buddy_list.html
@@ -32,15 +32,15 @@
 				displayMsg = buddyUserNames = alreadyActiveUserNames = '';
 
 				for(var eachUserName in buddyOidNameObj){
-					console.log(buddyOidNameObj[eachUserName]);
+					// console.log(buddyOidNameObj[eachUserName]);
 					buddyUserNames += '\n- ' + buddyOidNameObj[eachUserName]
 				}
 
 				for(var eachUserName in alreadyActiveIdNameObj){
-					console.log(alreadyActiveIdNameObj[eachUserName]);
+					// console.log(alreadyActiveIdNameObj[eachUserName]);
 					alreadyActiveUserNames += '\n- ' + alreadyActiveIdNameObj[eachUserName]
 				}
-				console.log(alreadyActiveUserNames);
+				// console.log(alreadyActiveUserNames);
 
 				if (alreadyActiveUserNames)
 				{
