--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/my_dashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/my_dashboard.html
@@ -9,13 +9,18 @@
 {% block title %}{% trans 'My Dashboard' %} {% endblock %}
 {% block body_content %}
 {% comment %}
-{% include "ndf/course_analytics.html" %}
+  {% include "ndf/course_analytics.html" %}
 {% endcomment %}
 <div class="student-dashboard-header-container">
     <div class="container">
         <div class="row student-dashboard-header">
             <div class="medium-12 columns">
-                <img src = "/static/ndf/images/metaStudio-profile.svg">
+                {% get_profile_pic request.user.pk as prof_pic %}
+                {% if prof_pic %}
+                  <img src="{{MEDIA_URL}}{{prof_pic.if_file.original.relurl}}">
+                {% else %}
+                  <img src = "/static/ndf/images/metaStudio-profile.svg">
+                {% endif %}
                 <div class="student-dashboard-info">
                     <span class="student-name"> {{user_obj.username}} </span>
                     <span> Points </span>
@@ -28,19 +33,15 @@
 
 <div class="course-overview-container student-dashboard container">
     <div class="row collapse course-overview">
-        {% if request.user.is_authenticated %}
-
+        <!---
         <div class="columns small-12 medium-6">
-      	{% comment %}
 
           <div class="ongoing-session">
             <h5>ONGOING SESSION </h5>
             <h3>Taking Screenshots of the work and doing something</h3>
             <button class="tiny button"><i class="fa fa-sign-in"></i>&nbsp;Enter Session</button>
           </div>
-      	{% endcomment %}
           <div class="course-status">
-          	{% comment %}
             <h5>Course status</h5>
             <div class="row">
               <div class="small-12 columns">
@@ -61,14 +62,10 @@
 
               </div>
             </div>
-          	{% endcomment %}
-
             <ul class="tabs" data-tab role="tablist">
               <li class="tab-title active" ><a href="#course-notification" role="tab" tabindex="0" aria-selected="true" aria-controls="panel2-1">Notifications</a></li>
-          	{% comment %}
 
               <li class="tab-title" ><a href="#course-act-logs" role="tab" tabindex="0" aria-selected="false" aria-controls="panel2-2">Activity Log</a></li>
-          	{% endcomment %}
 
             </ul>
             <div class="tabs-content course-notif-logs">
@@ -93,8 +90,7 @@
             </div>
           </div>
         </div>
-        {% endif %}
-
+        -->
         <div class="columns small-12 medium-6">
           <div class="course-detials course-section">
             <span class="course-section-heading">Courses</span>
