--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/upload_pic_widget.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/upload_pic_widget.html
@@ -8,14 +8,14 @@
         <div class="text-center">
         <div class="div-height">
           {% if prof_pic_obj %}
-                  <img src="{{MEDIA_URL}}{{prof_pic_obj.if_file.mid.relurl}}" class="img-height"/>
+                  <img src="{{MEDIA_URL}}{{prof_pic_obj.if_file.original.relurl}}" class="img-height"/>
           {% else %}
               {% if "Author" in group_object.member_of_names_list %}
                   <i class="fi-torso style2 text-center"></i>
               {% else %}
                   <img src="/static/ndf/images/metaStudio-profile.svg" alt="Profile picture for this group."  class="img-height">
-              {% endif %}   
-          {% endif %}   
+              {% endif %}
+          {% endif %}
         </div>
         {% if not no_update_btn %}
         {% if request.user.is_authenticated %}
@@ -32,7 +32,7 @@
         </div>
 
 
-            <div id="{{widget_for}}_prof_pic_prop" class="reveal-modal medium" data-reveal style="height:500px;"> 
+            <div id="{{widget_for}}_prof_pic_prop" class="reveal-modal medium" data-reveal style="height:500px;">
                 <a href="#" id="{{widget_for}}_upload_photo">
                   <div id="upload-photo-div" class="text-center">
                     <label class="upload_photo_lbl fi-upload">Upload New Photo</label>
@@ -68,7 +68,7 @@
                             <input type="submit" id="{{widget_for}}_submitpostid" value="Save" style="margin-left:2rem;" class="button tiny margin-p5" />
                             <input type="button" class="button tiny margin-p5" id="{{widget_for}}_btnUploadCancel" value="Cancel">
                         </div>
-                        <input type="hidden" name="type" value="profile_pic">           
+                        <input type="hidden" name="type" value="profile_pic">
                         <input type="hidden" name="user" value="{{usr}}">
                         {% if url_name %}
                         <input type="hidden" name="url_name" value="{{url_name}}">
@@ -103,13 +103,13 @@
     .img-height {
         height: 100%;
     }
-  
+
     .btn-font{
       font-size:15px !important;
     }
 
     .div-height {
-        margin-bottom: 0.5em; 
+        margin-bottom: 0.5em;
         height: 9em;
     }
 
@@ -119,7 +119,7 @@
       font-size:30px;
     }
 
-    .old_img{    
+    .old_img{
         border: 2px solid #0b8a91;
         display:inline-block;
         position:relative;
@@ -130,9 +130,9 @@
         bottom:-19px;
         right:0px;
         display:none;
-    }    
-    
-</style>        
+    }
+
+</style>
 
 <script type="text/javascript">
   // Hover events over old profile pics ---------------------------------------------------------
@@ -207,7 +207,7 @@
   // Update profile photo -----------------------------------------------------------------------
   $(document).on('click','#{{widget_for}}_submitpostid',function(){
     upload_from_existing = $("#{{widget_for}}_old_pic_ele").length
-    if($("#{{widget_for}}_docFile").val() != "" || upload_from_existing > 0) { 
+    if($("#{{widget_for}}_docFile").val() != "" || upload_from_existing > 0) {
       $("#{{widget_for}}_prof_pic_prop").foundation('reveal', 'close');
       $("#{{widget_for}}_message").show();
       $(".{{widget_for}}_upload_cancel_div").addClass("hide");
@@ -231,5 +231,5 @@
   $(document).on('closed.fndtn.reveal', '.reveal-modal', function () {
     $(this).removeClass("success").removeClass("alert").removeClass("warning");
   });
-    
+
 </script>
